Temporary Fix wrong coordinate in low resolution mobile phone

--- a/src/components/pages/Profile.css
+++ b/src/components/pages/Profile.css
@@ -5,10 +5,20 @@ li {
   display: block;
   height: auto !important;
   margin-top: 1rem !important;
-  width: 95%;
+  width: 129%;
   margin-right: auto;
   margin-left: auto;
   position: relative !important;
+}
+@media (min-width: 400px) {
+  .profileBlock {
+    width: 115%;
+  }
+}
+@media (min-width: 490px) {
+  .profileBlock {
+    width: 95%;
+  }
 }
 @media (min-width: 576px) {
   .profileBlock {
